Предварительный коммит (для сохранения изменений, без отправки на ревью).