@@ -2,26 +2,22 @@ package TaskApp;
 
 import java.util.ArrayList;
 
-public class InMemoryHistoryManager<T extends TaskInterface> implements HistoryManager<T> {
+public class InMemoryHistoryManager implements HistoryManager {
 
-    public ArrayList<T> history = new ArrayList<>();
+    public ArrayList<Task> history = new ArrayList<>();
 
     @Override
-    public ArrayList<T> getHistory() {
+    public ArrayList<Task> getHistory() {
         return history;
     }
 
     @Override
-    public void addHistory(T task) {
-        if (task == null) {
-            return;
-        }
-
-        if (history.size() == 10) {
-            history.remove(0);
-            history.add(task);
+    public void addHistory(Task task) {
+        if (history.size() > 9) {
+            history.removeFirst();
+            history.add(task.copy());
         } else {
-            history.add(task);
+            history.add(task.copy());
         }
     }
 }
